fix(styles): Avoid fixed heights to wrap long strings properly

--- a/system-addon/content-src/components/PreferencesPane/_PreferencesPane.scss
+++ b/system-addon/content-src/components/PreferencesPane/_PreferencesPane.scss
@@ -40,7 +40,9 @@
       }
 
       label {
+        display: inline-block;
         position: relative;
+        width: 100%;
 
         input {
           offset-inline-start: -30px;
